new website design

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,6 +1,6 @@
 .imgbox {
     height: 94vh;
-    background: url('../../assets/background.png');
+    background: url('../../assets/2img.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
