--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,8 @@
 .logo{
-    font-size: 40px;
+    font-size: 20px;
     font-family: 'Montserrat';
     font-weight: bold;
-    color: #ff4c0a;
+    color: #14505C;
     text-align: left;
 }
 
