--- a/src/components/NavbarMain/NavbarMain.module.css
+++ b/src/components/NavbarMain/NavbarMain.module.css
@@ -7,13 +7,13 @@
 .nav_text:hover{
     padding-top: 6px;
     font-size: 18px;
-    color: #ff4c0a !important;
+    color: #0E373F !important;
     font-weight: bold;
 }
 .active{
     padding-top: 6px !important;
     font-size: 18px;
-    color: #ff4c0a !important;
+    color: #0E373F !important;
     font-weight: bold;
 }
 
@@ -22,17 +22,17 @@
 }
 
 .drop:hover .nav_text{
-    color: #ff4c0a !important;
+    color: #0E373F !important;
     font-weight: bold;
     cursor: pointer;
     font-size: 18px;
     /* padding-top: 7px; */
 }
 .logo{
-    color: #ff4c0a !important;
-    font-weight: bold;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 40px !important;
+    color: #0E373F !important;
+    /* font-weight: bold; */
+    font-family: 'Poppins';
+    font-size: 20px !important;
 }
 .dropdownText{
     text-decoration: none;
@@ -40,7 +40,7 @@
 }
 
 .dropdownItem:hover .dropdownText{
-    color: #ff4c0a;
+    color: #0E373F !important;
 }
 .drop a:hover{
     background-color: white;
