--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap');
 
-body, html {
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: 'Poppins';
 }
