--- a/src/components/CaseStudy/CaseStudy.module.css
+++ b/src/components/CaseStudy/CaseStudy.module.css
@@ -48,7 +48,7 @@
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     /* background-image: url("../../assets/caseStudy/gradient.png"), linear-gradient(#eb01a5, #d13531); */
     border-radius: 10px;
     cursor: pointer;
