--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
     font-size: 20px;
     font-family: 'Montserrat';
     font-weight: bold;
-    color: #14505C;
+    color: #ffffff;
     text-align: left;
 }
 
